--- a/_templates/Instructions/slide1.html
+++ b/_templates/Instructions/slide1.html
@@ -1,16 +1,11 @@
-<div class="double-container">
-    <div class="text-container">
-        <p> In this experiment you will:</p>
-        <ul>
-            <li> Be able to post or see as many Memes you want for <b>10 minutes</b>. </li>
-            <li> Each time you decide to post a Meme, you select among a set of <b>6</b> potentially funny, interesting or relatable Meme pictures. </li>
-            <li> Please select the Meme you like the best and that you think the others will like as well. </li>
-            <li> You select a meme by <b>pressing the button below the image</b>.</li>
-            <li> In an earlier part of this study, these memes were rated by 40 independent participants. Thus, the feedback you will receive after you post is <strong>real</strong>. </li>
-            <li> The maximum number of Likes that a post received during the ratings was <b>34</b>, and the minimum was <b>6</b>.</li>
-        </ul>
+<div class="double-container" >
+    <div class="text-container" style="width: 45vw; padding: 1em" >
+        <p style="font-size:70%;"> Each time you decide to post, you select among a set of <b>6</b> potentially funny, interesting or relatable Memes. Please select the Meme you like the best and that you think the others will like as well. </p>
+        <p style="font-size:70%;"> You select a meme by <b>pressing the button below the image</b>.
+        <p style="font-size:70%;"> In an earlier part of this study, these memes were rated by 40 independent participants. Thus, the feedback you will receive after you post is <strong>real</strong>. </p>
+        <p style="font-size:70%;"> The maximum number of Likes that a post received during the ratings was <b>34</b>, and the minimum was <b>6</b>.</p>
     </div>
-    <div class="img-container">
-        <img class="task-img" src="{% static 'global/Posting.png' %}" />
+    <div class="img-container" >
+        <img class="task-img" style="width: 35vw;"  src="{% static 'global/Posting.png' %}" />
     </div>
 </div>
