--- a/_templates/Instructions/slide3.html
+++ b/_templates/Instructions/slide3.html
@@ -1,18 +1,9 @@
 <div class="double-container">
     <div class="text-container">
-        <p>
-            After you have selected the tags, your post is ready and you will see the real feedback associated with the image.
-        </p>
-        <p>
-            To reveal the post information, all you need to do is to move your mouse on top of the
-            <i>‘box’</i> and the information will be revealed. Here is an example.
-        </p>
-        <p>
-            <b>Try moving your mouse on top of the box.</b>
-        </p>
-        <p>
-            You will then be asked to report your emotional status. Please note you are <b>required to report your status</b> in order to continue.
-        </p>
+        <p>After you have selected the tags, your post is ready and you will see the real feedback associated with the image. </p>
+        <p> To reveal the post information, all you need to do is to move your mouse on top of the <i>‘box’</i> and the information will be revealed. Here is an example. </p>
+        <p><b>Try moving your mouse on top of the box.</b></p>
+        <p> You will then be asked to report your emotional status. Please note you are <b>required to report your status</b> in order to continue.</p>
     </div>
     <div class="button-container">       
         <button type="button" class="game-btn btn-outcome mousy" id="b3"> 
