--- a/_templates/Instructions/slide0.html
+++ b/_templates/Instructions/slide0.html
@@ -1,13 +1,13 @@
 <div class="double-container">
-    <div class="text-container">
-        <p> Please read carefully the information below. At the end of this instructions, you will be asked some comprehension questions to make sure they were understood properly.</p>
+    <div class="text-container" style="width: 45vw; padding: 1em">
+        <p style="font-size:70%;"> Please read carefully the information below. At the end of this instructions, you will be asked some comprehension questions to make sure they were understood properly.</p>
         <ul>
-            <li>In this study, you will be using a platform that resembles aspects of social media (for example, Instagram). </li>
-            <li>You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b>  Memes in an infinite Feed.</li>
-            <li>The figure to the right shows a preview of this platform. The left part displays the Feed. After you post for the first time, the information about your last post will be displayed in the right part of the screen.</li>
+            <li style="font-size:70%;">In this study, you will be using a platform that resembles aspects of social media (for example, Instagram). </li>
+            <li style="font-size:70%;">You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b>  Memes in an infinite Feed. You will be able to post or see as many Memes you want for <b>20 minutes</b>.</li>
+            <li style="font-size:70%;">The figure to the right shows a preview of this platform. The left part displays the Feed. After you post for the first time, the information about your last post will be displayed in the right part of the screen.</li>
         </ul>
     </div>
     <div class="img-container">
-        <img class="task-img" src="{% static 'global/Instructions.png' %}" />
+        <img class="task-img" style="width: 35vw;" src="{% static 'global/Instructions.png' %}" />
     </div>
 </div>
