--- a/_templates/Introduction/slide1.html
+++ b/_templates/Introduction/slide1.html
@@ -4,7 +4,7 @@
         <ul>
             <li> Be <b>18 or older</b>. </li>
             <li> Be fluent in <b>English</b>. </li>
-            <li> Focus only on the experiment (It will take around 15 minutes).</li>
+            <li> Focus only on the experiment (It will take 20 minutes).</li>
             <li> Use your <b>computer</b>. The experiment does not work on phones or tablets. </li>
             <li> Set this window into <b>Fullscreen</b> mode (if you do not know how to do it, we will explain) </li>
         </ul>
