--- a/_templates/Instructions/slide2.html
+++ b/_templates/Instructions/slide2.html
@@ -1,6 +1,7 @@
 <ul>
-    <li>After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. </li>
-    <li> These tags might be used for the data analysis of the study. </li>
-    <li> It is therefore important that your tags are as clear and descriptive as possible.</li>
-    <li> However, this is not required to post an image. You are free to do this step as you would be in real social media. </li>
+    <li style="font-size:70%;">After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. </li>
+    <li style="font-size:70%;"> These tags might be used for the data analysis of the study. It is therefore important that your tags are as clear and descriptive as possible.</li>
+    <li style="font-size:70%;"> However, this step not required to post an image. You are free to do this step as you would be in real social media. </li>
+    <li style="font-size:70%;">After you have selected the tags, your post is ready and you will see the real feedback associated with the image. </li>
+    <li style="font-size:70%;"> You will then be asked to report your emotional status. Please note you are <b>required to report your status</b> in order to continue.</li>
 </ul>
