--- a/_templates/Instructions/slide3.html
+++ b/_templates/Instructions/slide3.html
@@ -1,17 +1,55 @@
-<div class="double-container">
-    <div class="text-container">
-        <p>After you have selected the tags, your post is ready and you will see the real feedback associated with the image. </p>
-        <p> To reveal the post information, all you need to do is to move your mouse on top of the <i>‘box’</i> and the information will be revealed. Here is an example. </p>
-        <p><b>Try moving your mouse on top of the box.</b></p>
-        <p> You will then be asked to report your emotional status. Please note you are <b>required to report your status</b> in order to continue.</p>
-    </div>
-    <div class="button-container">       
-        <button type="button" class="game-btn btn-outcome mousy" id="b3"> 
-            <div class="btn-content"> 32 likes <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span>  :D  </div>
-            <div class="btn-hidden"> Hover me! </div>
-        </button> 
-        <!-- <p class="text-reveal" id="reveal">
-            Nice :D
-        </p> -->
-    </div>
+<div class="flex-questions">
+    <ul>
+        <li>
+            <!--Question 1-->
+            <div class="inst-question">
+                <label for="Q1">How many minutes do you have to interact in the platform?</label>
+            </div>
+            <div class="answer-field">
+                <input type="text" name="Q1" id="Q1" class="ControlQuestions">
+            </div>
+
+        </li>
+        <div class="hint" id="hint1">
+            <!-- Hint -->
+            Incorrect: see slide 1!
+        </div>
+        <li>
+            <!--Question 2-->
+            <div class="inst-question">
+                <label for="Q2"> Pick the <b>TRUE</b> statement</label>
+            </div>
+            <div class="answer-field">
+                <select name="Q2" id="Q2" class="dropdown ControlQuestions">
+                    <option value="nothing">--Select--</option>
+                    <option value="a">The feedback of the memes I choose is not real</option>
+                    <option value="b">The maximum amount of likes I can receive is 40</option>
+                    <option value="c">The maximum amount of likes I can receive is 34</option>
+                </select>
+            </div>
+        </li>
+        <div class="hint" id="hint2">
+            Incorrect: see slide 2!
+        </div>
+        <li>
+            <!--Question 3-->
+            <div class="inst-question">
+                <label for="Q3">Pick the <b>TRUE</b> statement</label>
+            </div>
+            <div class="answer-field">
+                <select name="Q3" id="Q3" class="dropdown ControlQuestions">
+                    <option value="nothing"> --Select-- </option>
+                    <option value="a"> I am required to put tags in my posts </option>
+                    <option value="b"> I am required to inform of my emotional status </option>
+                    <option value="c"> I am required to post from time to time </option>
+                </select>
+            </div>
+        </li>
+        <div class="hint" id="hint3">
+            Incorrect: see slide 3!
+        </div>
+    </ul>    
+    <!-- Submit answers and Next button (next button appears when user answers all questions correctly)-->
+    <button type="button" id="submitAnswer" class="button" onclick="ValidateSaveSubmit()"> Submit </button>
+    <button id="submit" class="button otree-btn-next" style="display: none;">Next</button>
 </div>
