--- a/simple_experiment/Feedback.html
+++ b/simple_experiment/Feedback.html
@@ -32,7 +32,7 @@
 	<section class="message-list" id="bsl">
 		<section class="message -left">
 			<div class="nes-balloon from-left">
-				<label id="iLikes" value="{{l}}" style="font-size:165%;">{{l}}</label>  <b style="color:red; font-size:160%;"> &#10084;</b> <br><span style="font-size:135%;"> people out of 40 <br> liked your post </span>
+				<label id="iLikes" value="{{l}}" style="font-size:300%;">{{l}}</label>  <b style="color:red; font-size:300%;"> &#10084;</b> 
 			</div>
 		</section>
 	</section>
@@ -40,7 +40,7 @@
 	<section class="message-list" id="emtl">
 		<section class="message -right">
 			<div class="nes-balloon from-right">
-				<label id="iDislikes" value="{{d}}" style="font-size:165%;">{{d}}</label> &nbsp; <i class="fa fa-thumbs-down" style="font-size:135%"></i>  <span style="font-size:135%;"> <br>people out of 40 <br> <b>did not</b> like your post </span>
+				<label id="iDislikes" value="{{d}}" style="font-size:300%;">{{d}}</label> &nbsp; <i class="fa fa-thumbs-down" style="font-size:300%"></i> 
 			</div>
 		</section>
 	</section>
