--- a/_templates/Instructions/slide2.html
+++ b/_templates/Instructions/slide2.html
@@ -1,7 +1,11 @@
-<ul>
-    <li style="font-size:70%;">After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. </li>
-    <li style="font-size:70%;"> These tags might be used for the data analysis of the study. It is therefore important that your tags are as clear and descriptive as possible.</li>
-    <li style="font-size:70%;"> However, this step not required to post an image. You are free to do this step as you would be in real social media. </li>
-    <li style="font-size:70%;">After you have selected the tags, your post is ready and you will see the real feedback associated with the image. </li>
-    <li style="font-size:70%;"> You will then be asked to report your emotional status. Please note you are <b>required to report your status</b> in order to continue.</li>
-</ul>
+<div class="double-container" >
+    <div class="text-container" style="width: 55vw; padding: 1em" >
+        <p style="font-size:75%;"> In an earlier part of this study, these memes were rated by 40 independent participants. Thus, the feedback you will receive after you post is <strong>real</strong>. </p>
+        <p style="font-size:75%;"> The maximum number of Likes that a post received during the ratings was <b>34</b>, and the minimum was <b>6</b>.</p>
+        <p style="font-size:75%;"> After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. These tags might be used for the data analysis of the study. It is therefore important that your tags are as clear and descriptive as possible.</li>
+        <p style="font-size:75%;"> However, this step not required to post an image. You are free to do this step as you would be in real social media. </li>
+    </div>
+    <!-- <div class="img-container" >
+        <img class="task-img" style="width: 35vw;"  src="{% static 'global/Posting.png' %}" />
+    </div> -->
+</div>
